--- a/Samples/SelfHosted/server/SelfHostedServer.csproj
+++ b/Samples/SelfHosted/server/SelfHostedServer.csproj
@@ -38,6 +38,14 @@
     <Reference Include="Microsoft.Http">
       <HintPath>..\..\Lib\HttpClient\Microsoft.Http.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\libs\Unity2.0\Microsoft.Practices.ServiceLocation.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Practices.Unity, Version=2.0.414.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\libs\Unity2.0\Microsoft.Practices.Unity.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.ServiceModel.Http, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\libs\Microsoft.ServiceModel.Http.dll</HintPath>
@@ -57,6 +65,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DIHttpEndpointBehaviour.cs" />
+    <Compile Include="Services\ILogger.cs" />
     <Compile Include="ProcessorFactories\DefaultProcessorFactory.cs" />
     <Compile Include="ProcessorFactories\RawProcessorFactory.cs" />
     <Compile Include="SelfHostedWebHttpHost.cs" />
@@ -64,6 +74,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Processors\RawHttpProcessor.cs" />
     <Compile Include="ServiceContracts\FooService.cs" />
+    <Compile Include="Services\Logger.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
