Updated dependency references.

--- a/Samples/SelfHosted/server/SelfHostedServer.csproj
+++ b/Samples/SelfHosted/server/SelfHostedServer.csproj
@@ -36,7 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Http">
-      <HintPath>..\..\Lib\HttpClient\Microsoft.Http.dll</HintPath>
+      <HintPath>..\..\..\codeplex\build\Debug\Http\bin\Microsoft.Http.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -46,13 +46,11 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\libs\Unity2.0\Microsoft.Practices.Unity.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.ServiceModel.Http, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\libs\Microsoft.ServiceModel.Http.dll</HintPath>
+    <Reference Include="Microsoft.ServiceModel.Http">
+      <HintPath>..\..\..\codeplex\build\Debug\Http\bin\Microsoft.ServiceModel.Http.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.ServiceModel.WebHttp, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\libs\Microsoft.ServiceModel.WebHttp.dll</HintPath>
+    <Reference Include="Microsoft.ServiceModel.WebHttp">
+      <HintPath>..\..\..\codeplex\build\Debug\Http\bin\Microsoft.ServiceModel.WebHttp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
