--- a/Samples/SelfHosted/FrankServer/FrankServer.fsproj
+++ b/Samples/SelfHosted/FrankServer/FrankServer.fsproj
@@ -5,14 +5,14 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{69c9b749-3ffb-4301-9057-dc21a56722d4}</ProjectGuid>
+    <ProjectGuid>{49df6cce-558c-4fd3-845b-77b7a005e461}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>FSharpServer</RootNamespace>
-    <AssemblyName>FSharpServer</AssemblyName>
+    <RootNamespace>FrankServer</RootNamespace>
+    <AssemblyName>FrankServer</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
-    <Name>FSharpServer</Name>
+    <Name>FrankServer</Name>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -23,7 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
-    <DocumentationFile>bin\Debug\FSharpServer.XML</DocumentationFile>
+    <DocumentationFile>bin\Debug\FrankServer.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>pdbonly</DebugType>
@@ -33,17 +33,27 @@
     <DefineConstants>TRACE</DefineConstants>
     <WarningLevel>3</WarningLevel>
     <PlatformTarget>x86</PlatformTarget>
-    <DocumentationFile>bin\Release\FSharpServer.XML</DocumentationFile>
+    <DocumentationFile>bin\Release\FrankServer.XML</DocumentationFile>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath32)\FSharp\1.0\Microsoft.FSharp.Targets" Condition="!Exists('$(MSBuildBinPath)\Microsoft.Build.Tasks.v4.0.dll')" />
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft F#\v4.0\Microsoft.FSharp.Targets" Condition=" Exists('$(MSBuildBinPath)\Microsoft.Build.Tasks.v4.0.dll')" />
   <ItemGroup>
     <Compile Include="Program.fs" />
-    <None Include="App.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="frack">
+      <HintPath>..\..\..\libs\Frank\frack.dll</HintPath>
+    </Reference>
+    <Reference Include="Frack.Extensions">
+      <HintPath>..\..\..\libs\Frank\Frack.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="frank">
+      <HintPath>..\..\..\libs\Frank\frank.dll</HintPath>
+    </Reference>
+    <Reference Include="FSharp.Monad">
+      <HintPath>..\..\..\libs\Frank\FSharp.Monad.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Http">
       <HintPath>..\..\..\codeplex\build\Debug\Http\bin\Microsoft.Http.dll</HintPath>
     </Reference>
@@ -61,9 +71,11 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Web" />
-    <Reference Include="System.Web" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\FSharp.Http\FSharp.Http.fsproj">
