Updated the wcf dependency to the most recent release. The stopwatch no longer works b/c the HttpRequestMessage no longer has a Properties property.

--- a/FSharp.Http/FSharp.Http.fsproj
+++ b/FSharp.Http/FSharp.Http.fsproj
@@ -32,17 +32,14 @@
     <DocumentationFile>bin\Release\FSharp.Http.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Http">
-      <HintPath>..\codeplex\build\Debug\Http\bin\Microsoft.Http.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.Http.Extensions">
-      <HintPath>..\codeplex\build\Debug\Http\bin\Microsoft.Http.Extensions.dll</HintPath>
+    <Reference Include="Microsoft.Net.Http">
+      <HintPath>..\codeplex\build\Release\Http\bin\Microsoft.Net.Http.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.ServiceModel.Http">
-      <HintPath>..\codeplex\build\Debug\Http\bin\Microsoft.ServiceModel.Http.dll</HintPath>
+      <HintPath>..\codeplex\build\Release\Http\bin\Microsoft.ServiceModel.Http.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.ServiceModel.WebHttp">
-      <HintPath>..\codeplex\build\Debug\Http\bin\Microsoft.ServiceModel.WebHttp.dll</HintPath>
+      <HintPath>..\codeplex\build\Release\Http\bin\Microsoft.ServiceModel.WebHttp.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core" />
