--- a/Formatters/Http.Formatters.csproj
+++ b/Formatters/Http.Formatters.csproj
@@ -40,6 +40,9 @@
     <Reference Include="Microsoft.ServiceModel.WebHttp">
       <HintPath>..\codeplex\build\Release\Http\bin\Microsoft.ServiceModel.WebHttp.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\libs\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Nina.ViewEngines">
       <HintPath>..\libs\Templating\Nina.ViewEngines.dll</HintPath>
     </Reference>
@@ -62,6 +65,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BsonProcessor.cs" />
+    <Compile Include="JsonNetProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HtmlProcessor.cs" />
   </ItemGroup>
