--- a/Formatters/Http.Formatters.csproj
+++ b/Formatters/Http.Formatters.csproj
@@ -56,7 +56,7 @@
     <Compile Include="JsonNetProcessor.cs" />
     <Compile Include="NonClosingStreamDecorator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="HtmlProcessor.cs" />
+    <Compile Include="ViewEngineProcessor.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
