I added a GenericMediaTypeProcessor that allows the ViewEngineProcessor to work correctly. The problem this introduces is separate processors for distinct types. At this time, such a solution appears inevitable. Also, I've noticed that the view sometimes doesn't render on the first load. I'm not sure why, and this doesn't always happen.

--- a/Formatters/Http.Formatters.csproj
+++ b/Formatters/Http.Formatters.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="BsonProcessor.cs" />
     <Compile Include="JsonNetProcessor.cs" />
+    <Compile Include="GenericMediaTypeProcessor.cs" />
     <Compile Include="NonClosingStreamDecorator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewEngineProcessor.cs" />
