Moved the haml template into a Templates folder and added a Razor view. The Templates folder is necessary as Razor is greedy about trying to load any view in the root path. I added an optional parameter to the ViewEngineProcessor to take a base path. The default value is 'Views', but in the sample, I used 'Templates' to demonstrate use.

--- a/Samples/ContactManager/ContactManager.csproj
+++ b/Samples/ContactManager/ContactManager.csproj
@@ -145,7 +145,8 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Contact.haml" />
+    <None Include="Templates\Contact.haml" />
+    <None Include="Templates\Contact.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Formatters\Http.Formatters.csproj">
