--- a/Samples/packages/repositories.config
+++ b/Samples/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\SelfHosted\server\packages.config" />
   <repository path="..\ContactManager\packages.config" />
+  <repository path="..\SelfHosted\FSharpServer\packages.config" />
 </repositories>
