--- a/Samples/ContactManager/ContactManager.csproj
+++ b/Samples/ContactManager/ContactManager.csproj
@@ -17,6 +17,7 @@
     <RootNamespace>ContactManager</RootNamespace>
     <AssemblyName>ContactManager</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <UseIISExpress>false</UseIISExpress>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -45,14 +46,17 @@
     <WCFjQueryAssemblyPath>$(ProgramFiles(x86))\$(RelativeInstallPath)</WCFjQueryAssemblyPath>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Http.Formatters, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\libs\WCFHTTPPreview3\Http.Formatters.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Net.Http, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\codeplex\build\Release\Http\bin\Microsoft.Net.Http.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Runtime.Serialization.Json, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\codeplex\build\Release\Http\bin\Microsoft.Runtime.Serialization.Json.dll</HintPath>
+    <Reference Include="Microsoft.Runtime.Serialization.Json">
+      <HintPath>..\..\libs\WCFHTTPPreview3\Microsoft.Runtime.Serialization.Json.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.ServiceModel.Http, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -147,12 +151,6 @@
   <ItemGroup>
     <None Include="Templates\Contact.haml" />
     <None Include="Templates\Contact.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Formatters\Http.Formatters.csproj">
-      <Project>{4B518094-4BE4-47EE-B2E0-E9534CFB2944}</Project>
-      <Name>Http.Formatters</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
