--- a/source/Formatters/Formatters.csproj
+++ b/source/Formatters/Formatters.csproj
@@ -68,13 +68,16 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.ServiceModel.Activation" />
     <Reference Include="System.ServiceModel.Web" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BsonFormatter.cs" />
+    <Compile Include="DataContractExtensions.cs" />
     <Compile Include="JsonNetFormatter.cs" />
     <Compile Include="NonClosingStreamDecorator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
