--- a/source/packages/repositories.config
+++ b/source/packages/repositories.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\MessageHandlers\packages.config" />
-  <repository path="..\OperationHandlers\packages.config" />
-  <repository path="..\Formatters\packages.config" />
+  <repository path="..\Formatters\JSONNet\packages.config" />
+  <repository path="..\Formatters\Core\packages.config" />
+  <repository path="..\Formatters\NinaViewEngine\packages.config" />
 </repositories>
