--- a/source/WebAPIContrib.Formatters.Core.nuspec
+++ b/source/WebAPIContrib.Formatters.Core.nuspec
@@ -1,20 +1,19 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>WebAPIContrib</id>
+    <id>WebAPIContrib.Formatters.Core</id>
     <version>0.3.0</version>
     <authors>Darrel Miller</authors>
     <owners>http://webapicontrib.codeplex.com/team/view</owners>
     <projectUrl>http://webapicontrib.codeplex.com</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>WebAPIContrib Operation Handlers and Message Handlers</description>
+    <description>WebAPIContrib Formatters with no external dependencies</description>
     <dependencies>
       <dependency id="WebApi.All" version="0.3.0" />
     </dependencies>
   </metadata>
  <files>
-    <file src="..\bin\release\WebApiContrib.OperationHandlers.dll" target="lib" />
-    <file src="..\bin\release\WebApiContrib.MessageHandlers.dll" target="lib" />
+    <file src="..\bin\release\WebAPIContrib.Formatters.Core.dll" target="lib" />
   </files>
 
 </package>
