--- a/source/WebAPIContrib.Formatters.Json.nuspec
+++ b/source/WebAPIContrib.Formatters.Json.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>WebAPIContrib.Formatters.JsonNet</id>
-    <version>0.3.0</version>
+    <version>0.3.1</version>
     <authors>Darrel Miller</authors>
     <owners>http://webapicontrib.codeplex.com/team/view</owners>
     <projectUrl>http://webapicontrib.codeplex.com</projectUrl>
@@ -10,7 +10,7 @@
     <description>WebAPIContrib JSON Formatters based on JSON.Net</description>
     <dependencies>
       <dependency id="WebApi.All" version="0.3.0" />
-	  <dependency id="WebApi.Formatters.Core" version="0.3.0" />
+	  <dependency id="WebApiContrib" version="0.3.1" />
       <dependency id="Newtonsoft.Json" version="4.0.2" />
     </dependencies>
   </metadata>
