--- a/source/packages/repositories.config
+++ b/source/packages/repositories.config
@@ -3,4 +3,6 @@
   <repository path="..\Formatters\JSONNet\packages.config" />
   <repository path="..\Formatters\Core\packages.config" />
   <repository path="..\Formatters\NinaViewEngine\packages.config" />
+  <repository path="..\WebApiContrib.OperationHandlers.Tests\packages.config" />
+  <repository path="..\Formatters\WebApiContrib.Formatters.Tests\packages.config" />
 </repositories>
