Added WebApi.IntegrationTests project

--- a/Samples/SelfHosted/server/SelfHostedServer.csproj
+++ b/Samples/SelfHosted/server/SelfHostedServer.csproj
@@ -101,7 +101,12 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\source\WebApiContrib.OperationHandlers\WebApiContrib.OperationHandlers.csproj">
+      <Project>{12108575-63A9-4C1B-90E6-8E0BA00D2B3C}</Project>
+      <Name>WebApiContrib.OperationHandlers</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
