--- a/source/packages/repositories.config
+++ b/source/packages/repositories.config
@@ -5,4 +5,5 @@
   <repository path="..\Formatters\NinaViewEngine\packages.config" />
   <repository path="..\WebApiContrib.OperationHandlers.Tests\packages.config" />
   <repository path="..\Formatters\WebApiContrib.Formatters.Tests\packages.config" />
+  <repository path="..\WebApi.IntegrationTests\packages.config" />
 </repositories>
