--- a/source/WebApi.IntegrationTests/WebApi.IntegrationTests.csproj
+++ b/source/WebApi.IntegrationTests/WebApi.IntegrationTests.csproj
@@ -77,6 +77,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileContentTests.cs" />
     <Compile Include="ObjectContentTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OperationContextTests.cs" />
@@ -85,6 +86,7 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+    <EmbeddedResource Include="XForms.pdf" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Formatters\Core\WebApiContrib.Formatters.Core.csproj">
