Added some tests

--- a/source/WebApi.IntegrationTests/WebApi.IntegrationTests.csproj
+++ b/source/WebApi.IntegrationTests/WebApi.IntegrationTests.csproj
@@ -78,6 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FileContentTests.cs" />
+    <Compile Include="HeaderTests.cs" />
     <Compile Include="ObjectContentTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OperationContextTests.cs" />
