Upgraded core library to 0.5.0 of WCF Web API

--- a/source/packages/repositories.config
+++ b/source/packages/repositories.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Formatters\JSONNet\packages.config" />
-  <repository path="..\Formatters\Core\packages.config" />
-  <repository path="..\Formatters\NinaViewEngine\packages.config" />
   <repository path="..\WebApiContrib.OperationHandlers.Tests\packages.config" />
-  <repository path="..\Formatters\WebApiContrib.Formatters.Tests\packages.config" />
+  <repository path="..\WebApiContrib.OperationHandlers\packages.config" />
+  <repository path="..\WebApiContrib.MessageHandlers\packages.config" />
   <repository path="..\WebApi.IntegrationTests\packages.config" />
+  <repository path="..\Formatters\WebApiContrib.Formatters.Tests\packages.config" />
+  <repository path="..\Formatters\NinaViewEngine\packages.config" />
+  <repository path="..\Formatters\Core\packages.config" />
 </repositories>
