Updates to Hypermedia Server sample

--- a/Samples/HypermediaServer/HypermediaAPI/HypermediaAPI.csproj
+++ b/Samples/HypermediaServer/HypermediaAPI/HypermediaAPI.csproj
@@ -118,7 +118,9 @@
     <Compile Include="Tools\HalContent.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Transaction\List\" />
