--- a/Samples/HypermediaServer/HypermediaClient/packages.config
+++ b/Samples/HypermediaServer/HypermediaClient/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="HttpClient" version="0.5.0" />
-  <package id="JsonValue" version="0.5.0" />
+  <package id="Hal.NET" version="1.0.10" />
+  <package id="HttpClient" version="0.6.0" />
+  <package id="JsonValue" version="0.6.0" />
   <package id="log4net" version="1.2.10" />
-  <package id="RESTAgent" version="1.0.17" />
+  <package id="RESTAgent" version="1.1.2-alpha" />
+  <package id="RESTAgent.Hal" version="1.1.2-alpha" />
 </packages>
