--- a/Samples/HypermediaServer/HypermediaServer/packages.config
+++ b/Samples/HypermediaServer/HypermediaServer/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="HttpClient" version="0.6.0" />
   <package id="JsonValue" version="0.6.0" />
+  <package id="log4net" version="1.2.10" />
   <package id="WebApi" version="0.6.0" />
   <package id="WebApi.All" version="0.6.0" />
   <package id="WebApi.Enhancements" version="0.6.0" />
